# pkging

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/pkging/: main.py
tests/: test_main.py
